# plot_traj_from_colmap

./: CMakeLists.txt  README.md  plotTrajectory.cpp  result.txt  test.cpp
